# klingklang

./: .gitignore  LICENSE  Makefile.am  README.md  TODO  TODO.md  configure.ac
include/klingklang/: base.h  config.h  config.h.in  device.h  event.h  format.h  frame.h  input.h  library.h  list.h  player-events.h  player-queue.h  player.h  str.h  timer-events.h  timer.h  util.h
include/klingklang/ui/: cover.h  image.h  keys.h  progressbar.h  widget.h  window-events.h  window-input.h  window.h
include/klingklang/ui/keys/: xcb.h  xkbcommon.h
m4/: ax_check_compile_flag.m4
src/: device.c  event.c  format.c  frame.c  input.c  library.c  list.c  main.c  player-events.c  player-queue.c  player.c  str.c  timer-events.c  timer.c  util.c
src/device/: alsa.c  ao.c  oss.c  portaudio.c  pulseaudio.c  sndio.c
src/ui/: cover.c  image.c  keys.c  progressbar.c  widget.c  window-events.c  window-input.c  window-wayland.c  window-xcb.c  window.c
src/ui/keys/: xcb.c  xkbcommon.c
src/ui/window/: wayland.c  xcb.c
